--- a/Glance Prototype A/Blik-Info.plist
+++ b/Glance Prototype A/Blik-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.burntcaramel.Glance.PrototypeA.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.burntcaramel.Blik.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,7 +27,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2014 Burnt Caramel. All rights reserved.</string>
+	<string>Copyright © 2014 Patrick George Wyndham Smith. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
