--- a/Blik Mac/Blik-Info.plist
+++ b/Blik Mac/Blik-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.burntcaramel.Blik.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.burntcaramel.${PRODUCT_NAME:rfc1034identifier}.Mac</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
