--- a/Blik.entitlements
+++ b/Blik.entitlements
@@ -10,5 +10,7 @@
 	<true/>
 	<key>com.apple.security.personal-information.calendars</key>
 	<true/>
+	<key>com.apple.security.files.bookmarks.app-scope</key>
+	<true/>
 </dict>
 </plist>
