--- a/Blik Mac/Blik-Info.plist
+++ b/Blik Mac/Blik-Info.plist
@@ -20,6 +20,20 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>28</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>d78b0628a95d5798006bf463bd79aea5988e1d50</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.productivity</string>
 	<key>LSMinimumSystemVersion</key>
