--- a/Crashlytics.framework/Versions/A/Resources/Info.plist
+++ b/Crashlytics.framework/Versions/A/Resources/Info.plist
@@ -2,29 +2,45 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleName</key>
-	<string>Crashlytics</string>
-	<key>CFBundleGetInfoString</key>
-	<string>Crashlytics Framework</string>
-	<key>CFBundleIdentifier</key>
-	<string>com.twitter.crashlytics.ios</string>
-	<key>CFBundlePackageType</key>
-	<string>FMWK</string>
-	<key>CFBundleVersion</key>
-	<string>41</string>
-	<key>CFBundleShortVersionString</key>
-	<string>2.2.6+kit</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright 2014 Twitter Inc.</string>
+	<key>BuildMachineOSBuild</key>
+	<string>13F34</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
-	<key>CFBundleSupportedPlatforms</key>
-	<array>
-		<string>iPhoneOS</string>
-		<string>iPhoneSimulator</string>
-		<string>MacOSX</string>
-	</array>
+	<key>CFBundleExecutable</key>
+	<string>Crashlytics</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.twitter.crashlytics.mac</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>Crashlytics</string>
+	<key>CFBundlePackageType</key>
+	<string>FMWK</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.0.8</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>CFBundleVersion</key>
+	<string>50</string>
+	<key>DTCompiler</key>
+	<string>com.apple.compilers.llvm.clang.1_0</string>
+	<key>DTPlatformBuild</key>
+	<string>6A2008a</string>
+	<key>DTPlatformVersion</key>
+	<string>GM</string>
+	<key>DTSDKBuild</key>
+	<string>14A382</string>
+	<key>DTSDKName</key>
+	<string>macosx10.10</string>
+	<key>DTXcode</key>
+	<string>0611</string>
+	<key>DTXcodeBuild</key>
+	<string>6A2008a</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2015 Crashlytics, Inc. All rights reserved.</string>
+	<key>UIDeviceFamily</key>
+	<array>
+		<integer>1</integer>
+	</array>
 </dict>
 </plist>
