--- a/Fabric.framework/Versions/A/Resources/Info.plist
+++ b/Fabric.framework/Versions/A/Resources/Info.plist
@@ -2,29 +2,41 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleName</key>
-	<string>Fabric</string>
-	<key>CFBundleGetInfoString</key>
-	<string>Fabric Framework</string>
-	<key>CFBundleIdentifier</key>
-	<string>io.fabric.sdk.ios</string>
-	<key>CFBundlePackageType</key>
-	<string>FMWK</string>
-	<key>CFBundleVersion</key>
-	<string>1.0.1</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0.1</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright 2014 Twitter Inc.</string>
+	<key>BuildMachineOSBuild</key>
+	<string>13F34</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
-	<key>CFBundleSupportedPlatforms</key>
-	<array>
-		<string>iPhoneOS</string>
-		<string>iPhoneSimulator</string>
-		<string>MacOSX</string>
-	</array>
+	<string>en</string>
+	<key>CFBundleExecutable</key>
+	<string>Fabric</string>
+	<key>CFBundleIdentifier</key>
+	<string>io.fabric.sdk.mac</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>Fabric</string>
+	<key>CFBundlePackageType</key>
+	<string>FMWK</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.2.4</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>CFBundleVersion</key>
+	<string>15</string>
+	<key>DTCompiler</key>
+	<string>com.apple.compilers.llvm.clang.1_0</string>
+	<key>DTPlatformBuild</key>
+	<string>6A2008a</string>
+	<key>DTPlatformVersion</key>
+	<string>GM</string>
+	<key>DTSDKBuild</key>
+	<string>14A382</string>
+	<key>DTSDKName</key>
+	<string>macosx10.10</string>
+	<key>DTXcode</key>
+	<string>0611</string>
+	<key>DTXcodeBuild</key>
+	<string>6A2008a</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2015 Twitter. All rights reserved.</string>
 </dict>
 </plist>
