--- a/Blik.xcodeproj/xcshareddata/xcschemes/Blik Trial.xcscheme
+++ b/Blik.xcodeproj/xcshareddata/xcschemes/Blik Trial.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B20DB2BE1B0C8ACA00E57532"
-               BuildableName = "Blik copy.app"
+               BuildableName = "Blik Trial.app"
                BlueprintName = "Blik Trial"
                ReferencedContainer = "container:Blik.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B20DB2BE1B0C8ACA00E57532"
-            BuildableName = "Blik copy.app"
+            BuildableName = "Blik Trial.app"
             BlueprintName = "Blik Trial"
             ReferencedContainer = "container:Blik.xcodeproj">
          </BuildableReference>
@@ -53,7 +53,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B20DB2BE1B0C8ACA00E57532"
-            BuildableName = "Blik copy.app"
+            BuildableName = "Blik Trial.app"
             BlueprintName = "Blik Trial"
             ReferencedContainer = "container:Blik.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B20DB2BE1B0C8ACA00E57532"
-            BuildableName = "Blik copy.app"
+            BuildableName = "Blik Trial.app"
             BlueprintName = "Blik Trial"
             ReferencedContainer = "container:Blik.xcodeproj">
          </BuildableReference>
